src/snapshots/min_2__tests__tokens__matcher.snap
---
source: src/tests.rs
expression: "&r.tokens"
---
Tokens {
    index: RefCell {
        value: 42,
    },
    tokens: [
        IMPORT(
            Token {
                raw: "import",
                position: Position {
                    column: 0,
                    line: 1,
                },
            },
        ),
        COL(
            Token {
                raw: ":",
                position: Position {
                    column: 6,
                    line: 1,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`@std/util`",
                position: Position {
                    column: 4,
                    line: 2,
                },
            },
        ),
        CBRACKETOPEN(
            Token {
                raw: "{",
                position: Position {
                    column: 15,
                    line: 2,
                },
            },
        ),
        IDENT(
            Token {
                raw: "pipe",
                position: Position {
                    column: 17,
                    line: 2,
                },
            },
        ),
        CBRACKETCLOSE(
            Token {
                raw: "}",
                position: Position {
                    column: 22,
                    line: 2,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 23,
                    line: 2,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`@std/math`",
                position: Position {
                    column: 4,
                    line: 3,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 15,
                    line: 3,
                },
            },
        ),
        IDENT(
            Token {
                raw: "matchExample",
                position: Position {
                    column: 0,
                    line: 6,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 12,
                    line: 6,
                },
            },
        ),
        IDENT(
            Token {
                raw: "v",
                position: Position {
                    column: 13,
                    line: 6,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 14,
                    line: 6,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 16,
                    line: 6,
                },
            },
        ),
        IDENT(
            Token {
                raw: "v",
                position: Position {
                    column: 4,
                    line: 7,
                },
            },
        ),
        MATCH(
            Token {
                raw: "match",
                position: Position {
                    column: 6,
                    line: 7,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 12,
                    line: 7,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 8,
                    line: 8,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 9,
                    line: 8,
                },
            },
        ),
        NUMBER(
            Token {
                raw: "1",
                position: Position {
                    column: 11,
                    line: 8,
                },
            },
        ),
        MINUS(
            Token {
                raw: "-",
                position: Position {
                    column: 13,
                    line: 8,
                },
            },
        ),
        MORETHAN(
            Token {
                raw: ">",
                position: Position {
                    column: 14,
                    line: 8,
                },
            },
        ),
        NUMBER(
            Token {
                raw: "1",
                position: Position {
                    column: 16,
                    line: 8,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 17,
                    line: 8,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 8,
                    line: 9,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 9,
                    line: 9,
                },
            },
        ),
        TEXTLITERAL(
            Token {
                raw: "\"a string\"",
                position: Position {
                    column: 11,
                    line: 9,
                },
            },
        ),
        MINUS(
            Token {
                raw: "-",
                position: Position {
                    column: 22,
                    line: 9,
                },
            },
        ),
        MORETHAN(
            Token {
                raw: ">",
                position: Position {
                    column: 23,
                    line: 9,
                },
            },
        ),
        UNDERLINE(
            Token {
                raw: "_",
                position: Position {
                    column: 25,
                    line: 9,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 26,
                    line: 9,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 8,
                    line: 10,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 9,
                    line: 10,
                },
            },
        ),
        MINUS(
            Token {
                raw: "-",
                position: Position {
                    column: 11,
                    line: 10,
                },
            },
        ),
        NUMBER(
            Token {
                raw: "2",
                position: Position {
                    column: 12,
                    line: 10,
                },
            },
        ),
        MINUS(
            Token {
                raw: "-",
                position: Position {
                    column: 14,
                    line: 10,
                },
            },
        ),
        MORETHAN(
            Token {
                raw: ">",
                position: Position {
                    column: 15,
                    line: 10,
                },
            },
        ),
        NUMBER(
            Token {
                raw: "2",
                position: Position {
                    column: 17,
                    line: 10,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 4,
                    line: 11,
                },
            },
        ),
        PLUS(
            Token {
                raw: "+",
                position: Position {
                    column: 4,
                    line: 12,
                },
            },
        ),
        NUMBER(
            Token {
                raw: "2",
                position: Position {
                    column: 6,
                    line: 12,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 7,
                    line: 12,
                },
            },
        ),
    ],
}
