src/snapshots/min_2__tests__tokens__math.snap
---
source: src/tests.rs
expression: "&r.tokens"
---
Tokens {
    index: RefCell {
        value: 49,
    },
    tokens: [
        IMPORT(
            Token {
                raw: "import",
                position: Position {
                    column: 0,
                    line: 1,
                },
            },
        ),
        COL(
            Token {
                raw: ":",
                position: Position {
                    column: 6,
                    line: 1,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`@std/util`",
                position: Position {
                    column: 4,
                    line: 2,
                },
            },
        ),
        CBRACKETOPEN(
            Token {
                raw: "{",
                position: Position {
                    column: 15,
                    line: 2,
                },
            },
        ),
        IDENT(
            Token {
                raw: "pipe",
                position: Position {
                    column: 17,
                    line: 2,
                },
            },
        ),
        CBRACKETCLOSE(
            Token {
                raw: "}",
                position: Position {
                    column: 22,
                    line: 2,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 23,
                    line: 2,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`@std/math`",
                position: Position {
                    column: 4,
                    line: 3,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 15,
                    line: 3,
                },
            },
        ),
        PUB(
            Token {
                raw: "pub",
                position: Position {
                    column: 0,
                    line: 4,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`+`",
                position: Position {
                    column: 4,
                    line: 4,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 7,
                    line: 4,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 8,
                    line: 4,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 9,
                    line: 4,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 11,
                    line: 4,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 12,
                    line: 4,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 14,
                    line: 4,
                },
            },
        ),
        TYPESCRIPT(
            Token {
                raw: "#a + b#",
                position: Position {
                    column: 16,
                    line: 4,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 23,
                    line: 4,
                },
            },
        ),
        PUB(
            Token {
                raw: "pub",
                position: Position {
                    column: 0,
                    line: 6,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`-`",
                position: Position {
                    column: 4,
                    line: 6,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 7,
                    line: 6,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 8,
                    line: 6,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 9,
                    line: 6,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 11,
                    line: 6,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 12,
                    line: 6,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 14,
                    line: 6,
                },
            },
        ),
        TYPESCRIPT(
            Token {
                raw: "#a - b#",
                position: Position {
                    column: 16,
                    line: 6,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 23,
                    line: 6,
                },
            },
        ),
        PUB(
            Token {
                raw: "pub",
                position: Position {
                    column: 0,
                    line: 8,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`*`",
                position: Position {
                    column: 4,
                    line: 8,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 7,
                    line: 8,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 8,
                    line: 8,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 9,
                    line: 8,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 11,
                    line: 8,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 12,
                    line: 8,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 14,
                    line: 8,
                },
            },
        ),
        TYPESCRIPT(
            Token {
                raw: "#a * b#",
                position: Position {
                    column: 16,
                    line: 8,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 23,
                    line: 8,
                },
            },
        ),
        PUB(
            Token {
                raw: "pub",
                position: Position {
                    column: 0,
                    line: 10,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`/`",
                position: Position {
                    column: 4,
                    line: 10,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 7,
                    line: 10,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 8,
                    line: 10,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 9,
                    line: 10,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 11,
                    line: 10,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 12,
                    line: 10,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 14,
                    line: 10,
                },
            },
        ),
        TYPESCRIPT(
            Token {
                raw: "#a / b#",
                position: Position {
                    column: 16,
                    line: 10,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 23,
                    line: 10,
                },
            },
        ),
    ],
}
